# RENEWLab

./: .gitignore  .gitmodules  Jenkinsfile  LICENSE  README  README.md  RENEWLab_doxygen.conf  config_ci.sh  goodJenkinsfile  install_cclibs.sh  install_pylibs.sh  install_soapy.sh  test
.githooks/: post-checkout  pre-commit
CC/: .clang-format
CC/Sounder/: BaseRadioSet-calibrate-analog.cc  BaseRadioSet-calibrate-digital.cc  BaseRadioSet-calibrate.cc  BaseRadioSet.cc  BaseRadioSetUHD.cc  CMakeLists.txt  ClientRadioSet.cc  ClientRadioSetUHD.cc  Makefile  README  Radio.cc  RadioUHD.cc  comms-lib-avx.cc  comms-lib.cc  config.cc  data_generator.cc  format.sh  hdf5_lib.cc  hdf5_reader.cc  main.cc  receiver.cc  recorder.cc  recorder_thread.cc  recorder_worker.cc  run_sounder.py  scheduler.cc  sdr-calibrate.cc  sdr-lib.cc  signalHandler.cpp  utils.cc
CC/Sounder/files/: 1u-pilot-dl.json  1u-pilot.json  1u-ul-data.json  2u-ul-data.json  bs-measurements-2.5g.json  bs-measurements-3.6g.json  bs119.txt  bs166.txt  bs179.txt  bsconfig.json  cl-measurements-2.5g.json  cl-measurements-3.6g.json  conf-bs-and-one-client-with-uplink-data.json  conf-bs-and-one-client.json  conf-bs-and-one-ue-with-uplink-data.json  conf-bs-and-one-ue.json  conf-bs-and-two-client-with-uplink-data.json  conf-bs-and-two-client.json  conf-bs-and-two-ue-with-uplink-data.json  conf-bs-and-two-ue.json  conf-bs-default.hjson  conf-bs-only.json  conf-client-only.json  conf-ue-default.hjson  conf-ue-only.json  david-config-2.5g.json  david-config-3.6g.json  hub-serials.txt  iris-serials.txt  iris_serials.txt  kirk-config-2.5g.json  kirk-config-3.6g.json  measurements-iris-serials.txt  powder-1u-pilot-dl.json  powder-1u-pilot.json  powder-1u-ul-data.json  powder-2u-pilot.json  powder-2u-ul-data.json  powder-bs-only-2.5g.json  powder-client-only-2.5g.json  (+24 more)
CC/Sounder/files/anechoic_conf/: conf-anechoic-chamber.json  hub-serials-anechoic.txt  iris-serials-anechoic.txt
CC/Sounder/files/honors_conf/: conf-honors.json  hub-serials-honors.txt  iris-serials-honors.txt
CC/Sounder/files/special_conf/: conf-reciprocal-calib-internal.json  conf-reciprocity-and-explicit-pilots.json  powder-conf-cell-planning-bs.json  powder-conf-cell-planning-cl.json  powder-conf-cell-planning.json  topology-utah-hospital.json  usrp-16QAM.json  usrp-bs-only.json  usrp-bs-serials.txt  usrp-client-only.json  usrp-conf-one-client.json  usrp_16qam.json  usrp_bs_only_topology.json  usrp_client_only_topology.json  usrp_topology.json
CC/Sounder/include/: BaseRadioSet.h  BaseRadioSetUHD.h  ClientRadioSet.h  ClientRadioSetUHD.h  Radio.h  RadioUHD.h  comms-lib.h  concurrentqueue.h  config.h  constants.h  data_generator.h  fft.h  hdf5_lib.h  hdf5_reader.h  logger.h  macros.h  matplotlibcpp.h  receiver.h  recorder.h  recorder_thread.h  recorder_worker.h  scheduler.h  sdr-lib.h  signalHandler.hpp  utils.h  version_config.h.in
CC/Sounder/tests/comms-func/: CMakeLists.txt  test-main.cc
MATLAB/: 5GNR_dl_mimo__beamsw.m  OBCH_rl_ofdm_siso.m  OSCAR_rl_ofdm_downlink_miso.m  POWDER_arrays.txt  beacon.txt  berr_perfect.m  bits2syms.m  diff_corr.mat  getRxVec.m  hub_py.py  iris_demo_tdd_py.m  iris_demo_tdd_py_chained.m  iris_demo_tdd_py_mimo.m  iris_demo_tdd_py_mimo.m~  iris_demo_tdd_py_mimo_loop.m  iris_demo_tdd_py_simo.m  iris_demo_tdd_py_simple.m  iris_py.m  iris_py.py  iris_py_single_frame.py  limit_gain.m  mimo.py  mimo_driver.m  mimo_driver.py  mod_demod.m  plot__beamsw.m  plot_mrc_gain_64qam.m  plot_mrc_vs_branch.m  process_simo.m  replicate_RENEW_array.m  rl_dl_exp.m  rl_dl_mimo_NEW.m  rl_mimo_NEW.m  rl_ofdm_calib.m  rl_ofdm_dl_mimo.m  rl_ofdm_dl_mimo__beamsw.m  rl_ofdm_downlink_mimo_explicit.m  rl_ofdm_downlink_miso.m  rl_ofdm_downlink_mmimo.m  rl_ofdm_downlink_mmimo_exp.m  (+17 more)
MATLAB/MATLAB_partials/: bits2syms.m  getRxVec.m  iris_py.m  iris_py.py  ofdm_mimo.m  ofdm_simo.m  ofdm_siso.m
MATLAB/MATLAB_partials_POWDER/: getRxVec.m  iris_py.m  iris_py.py  mod_demod.m  ofdm_mimo.m  ofdm_simo.m  ofdm_siso.m
MATLAB/MATLAB_partials_POWDER/old_data/: simo_189_24_145.mat  simo_24_32_145.mat
MATLAB/MATLAB_solutions_POWDER/: iris_py.m  ofdm_simo.m  ofdm_siso.m
MATLAB/old_data/: mimo_60_145_try_2.mat  mimo_60_145_try_3.mat  mimo_60_145_try_4.mat  mimo_60_145_try_5.mat  rx_mimo_data_08_02.mat  simo_103_180_145.mat
PYTHON/DEMOS/: AGC_SIM_DEMO.py  BEACON_SWEEP.py  MMIMO_DOWNLINK.py  MMIMO_RECEIVER.py  MyFuncAnimation.py  NB_CAL_DEMO.py  README  SISO_OFDM.py  SISO_RX.py  SISO_TX.py  SISO_TXRX_TDD.py  SOUNDER_TXRX.py  WB_CAL_DEMO.py  mMIMO_OFDM.py
PYTHON/IrisUtils/: 3gpp_chanModel.py  FindArrays.py  agc_fsm_iris.py  bandpower.py  channel_analysis.py  csi_analysis.py  csi_analysis.sh  csi_lib.py  data_recorder.py  deployment_tool.py  detect_peaks.py  digital_rssi.py  extract_pilots_data.py  fft_power.py  file_rdwr.py  find_lts.py  gain_finder.py  generate_sequence.py  hdf5_lib.py  hdf_dump.py  hdf_dump_xn.py  init_fncs.py  iris_health_monitor.py  macros.py  ml_solver.py  mmimo_receiver.py  ofdm_plotter.py  ofdmtxrx.py  peakdet.py  plot_hdf5.py  plot_hdf5_KIRK.py  plot_lib.py  plot_snr_powder.py  plotter.py  plt_simp.py  print_sensor.py  run_sounder.py  sample_offset_cal.py  sample_offset_cal_prototype.py  type_conv.py  (+1 more)
PYTHON/IrisUtils/codebooks/: gold-127  gold-511  kasamilarge-255  kasamilarge-63
PYTHON/IrisUtils/data_in/: Argos-2019-3-16-15-12-43_1x8x1.hdf5.REMOVED.git-id  LTE5_im.py  LTE5_re.py  bs_serial_num.txt  bs_serials.txt  cl_serials.txt  gainTable_07-20-18.csv
RF Characterization/: help_funcs.py  meta.py  mini_meta.py
WEBGUI/: README.md  config.py  emails.py  iris_get_status.py  renew.py  requirements.txt
WEBGUI/migrations/versions/: 3dc950cdbe38_init.py
WEBGUI/templates/: 404.html  500.html  root.html
